--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pour",
   "version": "0.1.0",
   "homepage": "https://jethrobizumuremyi.github.io/pour",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
